# ave-database

./: .gitignore  AVE-PLATFORM-OVERVIEW.md  AWESOME.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HALL_OF_FAME.md  LICENSE  PARTNER_PROGRAMME.md  README.md  RESPONSIBLE_DISCLOSURE.md  ROADMAP.md  SECURITY.md  docker-compose.phase11.yml  docker-compose.phase13.yml  docker-compose.phase15.yml  docker-compose.phase18.yml  docker-compose.phase20.yml  docker-compose.phase21.yml  docker-compose.phase22.yml  docker-compose.phase23.yml  docker-compose.phase24.yml  docker-compose.phase25.yml  docker-compose.phase26.yml  docker-compose.phase30.yml  fly.toml
.github/: PULL_REQUEST_TEMPLATE.md
adversarial-benchmark/: README.md  server.py
agent-reputation-system/: README.md  server.py
api-gateway/: README.md  server.py
autonomous-audit-agent/: README.md  server.py
autonomous-redteam/: README.md  arta-config.example.yaml
ave/: README.md  pyproject.toml
ave-database/: README.md  index.json  severity_index.json
ave/ave/: __init__.py  __main__.py  cli.py  export.py  gamification.py  poc.py  redact.py  registry.py  schema.py  scoring.py  submit.py  timeline.py  validate.py
capability-marketplace/: README.md  server.py
capacity-planner/: README.md  server.py
certification/: README.md  checker.py  requirements.txt
chaos-orchestrator/: README.md  server.py
cognitive-load-balancer/: README.md  server.py
collaborative-learning/: README.md  server.py
collaborative-learning-broker/: README.md  server.py
collective-swarm/: README.md  server.py
(+287 files in other folders)
