[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nail-ave"
version = "1.0.0"
description = "AVE — Agentic Vulnerabilities & Exposures. The CVE database for AI agent failures."
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "NAIL Institute"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["ave*"]

[project.scripts]
ave = "ave.cli:main"
